<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="100dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/btnbackground"
            >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_computing"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            />

            <TextView
                android:id="@+id/timeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_30_am"
                android:layout_marginStart="8dp"
                android:layout_below="@id/title"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/hypen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_below="@id/title"
                android:textColor="@color/white"
                android:layout_toEndOf="@id/timeStart"
                />

            <TextView
                android:id="@+id/timeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_30_pm"
                android:layout_marginStart="8dp"
                android:layout_below="@id/title"
                android:textColor="@color/white"
                android:layout_toEndOf="@id/hypen"
                />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>